--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,14 @@ server.port=8085
 server.servlet.context-path=/
 logging.level.org.springframework=info
 server.error.include-message=always
+
+# H2 in-memory database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 console (optional, if you want to access it via browser)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
