--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8085
 server.servlet.context-path=/
 server.error.include-message=always
 
-# H2 console (optional, if you want to access it via browser)
+# H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
